Fixed z-index issue navbar-top

--- a/L1Q1 Project Smart Energy/SmartEnergy.Client/Components/Layout/NavMenu.razor.css
+++ b/L1Q1 Project Smart Energy/SmartEnergy.Client/Components/Layout/NavMenu.razor.css
@@ -18,6 +18,7 @@
 
 .top-row {
     height: 3.5rem;
+    z-index: 1000;
 }
 
 .navbar-brand {
