--- a/L1Q1 Project Smart Energy/SmartEnergy.Client/wwwroot/app.css
+++ b/L1Q1 Project Smart Energy/SmartEnergy.Client/wwwroot/app.css
@@ -33,7 +33,7 @@ h1:focus {
 .navbar-dark,
 .top-row {
     background: black;
-    z-index: 5;
+    z-index: 1000;
 }
 
 .valid.modified:not([type='checkbox']) {
